--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -8,7 +8,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main2"
-    tools:context="com.example.ddizoya.cambiosactivitis.MainActivity">
+    tools:context="com.example.ddizoya.cambiosactivitis.MainActivity"
+
+    >
 
     <fragment
         android:layout_width="wrap_content"
